tests/specs/ecosystem/jotai/jotai/2_7_0_jsr_0.test
jotai/jotai/2.7.0-jsr.0
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
Check file://<tmpdir>/src/vanilla.ts
Check file://<tmpdir>/src/vanilla/utils.ts
Check file://<tmpdir>/src/react.ts
Check file://<tmpdir>/src/react/utils.ts
error: TS1170 [ERROR]: A computed property name in a type literal must refer to an expression whose type is a literal type or a 'unique symbol' type.
  [Symbol.observable]?: () => ObservableLike<T> | undefined;
  ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/vanilla/utils/atomWithObservable.ts:12:3

TS2339 [ERROR]: Property 'observable' does not exist on type 'SymbolConstructor'.
  [Symbol.observable]?: () => ObservableLike<T> | undefined;
          ~~~~~~~~~~
    at file://<tmpdir>/src/vanilla/utils/atomWithObservable.ts:12:11

Found 2 errors.

